# Datalib

./: LICENSE  README.md  conf.py  index.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
src/datalib/: __init__.py
src/datalib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/datalib/analysis/: clustering.py
src/datalib/preprocessing/: csv_handler.py  transformations.py
src/datalib/statslib/: __init__.py  basic_stats.py
src/datalib/visualization/: advanced_viz.py  charts.py
src/datalib_genta.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: conftest.py  test_basic_stats.py  test_charts.py  test_csv_handler.py  test_transformations.py
tests/: test_basic_stats.py  test_charts.py  test_transformations.py
