[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalib"
version = "0.1.0"
description = "A data science library"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["datalib"]