[project]
name = "datalib_genta"
version = "0.1.2"
description = "A Python library for data manipulation, statistical analysis, and machine learning."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ibrahim Trabelsi" }]
requires-python = ">=3.7"  # Moved from tool.setuptools
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
# python_requires removed from here
packages = { find = { where = ["src"] } }  # Simplified package configuration

# The dynamic section can be removed if not needed