[metadata]
name = datalib_genta
version = 0.1.2
author = Ibrahim Trabelsi
author_email = Trabelsi_Ibrahim@hotmail.com
description = A Python library for data manipulation, statistics, and visualization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    scikit-learn

[options.packages.find]
where = src
